[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameLobby.gd" type="Script" id=1]

[node name="GameLobby" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="GameLocation" type="CenterContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 480.0
margin_top = 206.0
margin_right = 605.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect" ]

[node name="Base" type="Container" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="PlayerList" type="ItemList" parent="Base" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 114.0
margin_right = 207.0
margin_bottom = 574.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
max_text_lines = 100
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Columns", "Icon", "Material", "Visibility", "custom_colors", "custom_constants" ]

[node name="ConfigContainers" type="CenterContainer" parent="Base" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 221.0
margin_top = 68.0
margin_right = 1001.0
margin_bottom = 594.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="PlayerName" type="LineEdit" parent="Base" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 39.0
margin_right = 192.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
text = "Random"
max_length = 15
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="HostButton" type="Button" parent="Base/PlayerName" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 184.0
margin_right = 278.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Host"
flat = false
align = 1

[node name="JoinButton" type="Button" parent="Base/PlayerName" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 292.0
margin_right = 386.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Join"
flat = false
align = 1

[node name="Target" type="LineEdit" parent="Base" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 7.0
margin_right = 107.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
text = "127.0.0.1"
max_length = 15
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="GameOptions" type="OptionButton" parent="Base" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 417.0
margin_top = 32.0
margin_right = 528.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1

[node name="Status" type="Label" parent="Base" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 276.0
margin_top = 11.0
margin_right = 444.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Welcome"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Version" type="Label" parent="Base" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 851.0
margin_top = 11.0
margin_right = 1019.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "V0.0.6"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Port" type="Label" parent="Base" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_top = 10.0
margin_right = 281.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = ":????"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Credit" type="Button" parent="Base" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 924.0
margin_top = 39.0
margin_right = 1018.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credit"
flat = false
align = 1

[node name="CenterContainer" type="CenterContainer" parent="Base/Credit" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -684.0
margin_top = 41.0
margin_right = 81.0
margin_bottom = 546.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Mouse" ]

[node name="ColorRect" type="ColorRect" parent="Base/Credit/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 182.0
margin_top = 52.0
margin_right = 582.0
margin_bottom = 452.0
rect_min_size = Vector2( 400, 400 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Mouse", "Rect", "Size Flags" ]

[node name="RichTextLabel" type="RichTextLabel" parent="Base/Credit/CenterContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 182.0
margin_top = 52.0
margin_right = 582.0
margin_bottom = 452.0
rect_min_size = Vector2( 400, 400 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "[center]Click \"Credit\" to close.

Made by: [color=#00AA00][url=https://www.doowahree.com]Doowahree [/url][/color]
Made with: [color=#00AA00][url=https://godotengine.org]Godot Engine[/url][/color]

Cards Against Humanity - [CC-BY-NC-SA 2.0]
(This only included in non-commerical versions!)
Concept & Idea - [color=#00AA00][url=https://cardsagainsthumanity.org]cardsagainsthumanity.com[/url][/color]
Cards - [color=#00AA00][url=https://github.com/crhallberg/json-against-humanity]JSON version by crhallberg[/url][/color]


[/center]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Click \"Credit\" to close.

Made by: Doowahree 
Made with: Godot Engine

Cards Against Humanity - [CC-BY-NC-SA 2.0]
(This only included in non-commerical versions!)
Concept & Idea - cardsagainsthumanity.com
Cards - JSON version by crhallberg


"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Mouse", "Rect" ]

[connection signal="pressed" from="Base/PlayerName/HostButton" to="." method="_on_host_pressed"]

[connection signal="pressed" from="Base/PlayerName/JoinButton" to="." method="_on_join_pressed"]

[connection signal="item_selected" from="Base/GameOptions" to="." method="sync_configs"]

[connection signal="pressed" from="Base/Credit" to="." method="_on_Credit_pressed"]

[connection signal="meta_clicked" from="Base/Credit/CenterContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]


